[gd_scene load_steps=7 format=2]

[ext_resource path="res://actors/Mobs/Boss/Boss.gd" type="Script" id=1]
[ext_resource path="res://actors/Mobs/Boss/boss.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "phase1"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "phase2"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "phase3"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 15 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 28.7506
height = 65.4745

[node name="Boss" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/phase1 = SubResource( 1 )
anims/phase2 = SubResource( 2 )
anims/phase3 = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.975639
shape = SubResource( 4 )

[node name="ProjectileTimer" type="Timer" parent="."]

[node name="PhasesTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_ProjectileTimer_timeout"]
[connection signal="timeout" from="PhasesTimer" to="." method="_on_PhasesTimer_timeout"]
